> npm install --save lodash NPM install "lodash", so that we can import it from "node_modules".
Move "index.html" to "dist" folder, reference "main.js" bundle, which will be created by Webpack after it runs.
Move our "index.js" into "src" folder and explicitly "import _ from 'lodash'".

> npm install webpack webpack-cli --save-dev
"webpack-cli" is used to run webpack via command line.

> npx webpack
Without parameters, this command uses "src/index.js" as the entry point and generates "dist/main.js" as the output.

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,2 @@
 .idea/
+webpack.js.org/2018-08-01 - Getting Started - import, export, lodash, config, bundle, NPM scripts/webpack-demo/node_modules/
