--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 .idea/
 webpack.js.org/2018-08-01 - Getting Started - import, export, lodash, config, bundle, NPM scripts/webpack-demo/node_modules/
+webpack.js.org/2018-08-01 - Getting Started - import, export, lodash, config, bundle, NPM scripts/webpack-demo/dist/main.js
