--- a/webpack.js.org/2018-08-02 - Asset Management - Loading CSS, images, fonts, data, global assets/webpack-demo/package.json
+++ b/webpack.js.org/2018-08-02 - Asset Management - Loading CSS, images, fonts, data, global assets/webpack-demo/package.json
@@ -15,6 +15,7 @@
   },
   "devDependencies": {
     "css-loader": "^1.0.0",
+    "file-loader": "^1.1.11",
     "style-loader": "^0.21.0",
     "webpack": "^4.16.3",
     "webpack-cli": "^3.1.0"
