--- a/my-projects/2018-08-17 - Using TypeScript, third-party JS and CSS, internal CSS, images, fonts/package.json
+++ b/my-projects/2018-08-17 - Using TypeScript, third-party JS and CSS, internal CSS, images, fonts/package.json
@@ -5,10 +5,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "npm run clean-dev && webpack --config webpack-config/webpack.dev.js --watch --profile --progress",
+    "clean-dev": "rimraf dist/dev/*"
   },
   "author": "",
   "devDependencies": {
+    "awesome-typescript-loader": "3.0.8",
+    "rimraf": "^2.6.2",
+    "typescript": "^3.0.1",
     "webpack": "3.7.1"
   }
 }
