--- a/my-projects/2018-08-17 - Using TypeScript, third-party JS and CSS, internal CSS, images, fonts/package.json
+++ b/my-projects/2018-08-17 - Using TypeScript, third-party JS and CSS, internal CSS, images, fonts/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "devDependencies": {
     "awesome-typescript-loader": "3.0.8",
+    "html-webpack-plugin": "^3.2.0",
     "rimraf": "^2.6.2",
     "typescript": "^3.0.1",
     "webpack": "3.7.1"
